--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "posthog-js": "^1.257.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
