--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -151,6 +151,11 @@ otp_expiry = 3600
 # subject = "You have been invited"
 # content_path = "./supabase/templates/invite.html"
 
+# Custom email confirmation template
+[auth.email.template.confirmation]
+subject = "Confirm your email - Cassian"
+content_path = "./supabase/templates/confirmation.html"
+
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
 enable_signup = false
